# ki-engineering-werkstatt

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  GOVERNANCE.md  LICENSE  NOTICE  README.en.md  README.md  ROADMAP.md  SECURITY.md  ai.txt  justfile  marimo.toml  pyproject.toml  robots.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  badge.json  dependabot.yml
.github/ISSUE_TEMPLATE/: compliance-update.yml  lektion-fehler.yml  neue-lektion.yml
.github/workflows/: compliance-check.yml  link-check.yml  lint.yml  notebooks-build.yml  notebooks-smoke.yml  release.yml  secrets-scan.yml  typecheck.yml
datasets/: README.md
datasets/lizenzen/: 10kgnad.md  germanquad.md
datasets/manifests/: 10kgnad.yaml  germanquad.yaml
datasets/samples/: de_minicorpus.json
docs/: glossar.md  quellen.md  stilrichtlinien.md
docs/lernpfade/: compliance-officer.md  data-scientist.md  quereinsteigerin.md  wp-entwicklerin.md
docs/rechtliche-perspektive/: ai-act-tracker.md  asiatische-llms.md  avv-musterklauseln.md  disclaimer.md  dsgvo-checklisten.md  urheberrecht-trainingsdaten.md
docs/workshops/: 16h-zweitagesworkshop.md  4h-crashkurs.md  8h-tagesworkshop.md  README.md
infrastruktur/docker/: README.md  compose-fullstack.yml  dev-container.Dockerfile
infrastruktur/eu-modelle/aleph-alpha-pharia/: README.md
infrastruktur/eu-modelle/ionos-ai-foundation/: README.md
infrastruktur/eu-modelle/mistral-eu/: README.md
infrastruktur/eu-modelle/ollama-lokal/: README.md
infrastruktur/eu-modelle/vllm-on-prem/: README.md
infrastruktur/observability/: README.md
infrastruktur/vektorstores/: README.md  pgvector-init.sql  qdrant-compose.yml
phasen/00-werkzeugkasten/: compliance.md  markt-und-realitaet.md  modul.md  weiterfuehrend.md
phasen/00-werkzeugkasten/code/: 01_setup_verifier.py
phasen/00-werkzeugkasten/lektionen/: 01-hardware-matrix.md  02-uv-installieren.md  03-marimo-statt-jupyter.md  04-ollama-lokal.md  05-eu-cloud-stack.md  06-dev-container.md  07-markt-und-realitaet.md
phasen/00-werkzeugkasten/loesungen/: 01_loesung.py
phasen/00-werkzeugkasten/uebungen/: 01-aufgabe.md
phasen/01-mathematik-grundlagen/: compliance.md  modul.md
phasen/01-mathematik-grundlagen/code/: 01_embedding_explorer.py
phasen/01-mathematik-grundlagen/lektionen/: 01-vektoren-und-embeddings.md  02-wahrscheinlichkeit-und-cross-entropy.md  03-gradient-descent-und-information.md
phasen/01-mathematik-grundlagen/loesungen/: 01_loesung.py
phasen/01-mathematik-grundlagen/uebungen/: 01-aufgabe.md
phasen/02-klassisches-ml/: compliance.md  modul.md
phasen/02-klassisches-ml/code/: 01_kreditrisiko_klassifikator.py
phasen/02-klassisches-ml/lektionen/: 01-train-val-test-und-leakage.md  02-modellauswahl-baseline-bis-boosting.md  03-shap-und-bias-audit.md
phasen/02-klassisches-ml/loesungen/: 01_loesung.py
phasen/02-klassisches-ml/uebungen/: 01-aufgabe.md
phasen/03-deep-learning-grundlagen/: compliance.md  modul.md
phasen/03-deep-learning-grundlagen/code/: 01_pytorch_dl_kalkulator.py
phasen/03-deep-learning-grundlagen/lektionen/: 01-pytorch-tensors-und-autograd.md  02-mlp-und-cnn-bausteine.md  03-training-loop-hygiene-und-tracking.md
phasen/04-computer-vision/: compliance.md  modul.md
phasen/05-deutsche-tokenizer/: compliance.md  modul.md  weiterfuehrend.md
phasen/06-sprache-und-audio/: compliance.md  modul.md
phasen/07-transformer-architektur/: compliance.md  modul.md
phasen/08-generative-modelle/: compliance.md  modul.md
phasen/09-state-space-und-hybride/: compliance.md  modul.md
phasen/10-llm-von-null/: compliance.md  modul.md
phasen/11-llm-engineering/: compliance.md  modul.md  weiterfuehrend.md
phasen/12-finetuning-und-adapter/: compliance.md  modul.md  weiterfuehrend.md
phasen/13-rag-tiefenmodul/: compliance.md  modul.md  weiterfuehrend.md
phasen/14-agenten-und-mcp/: compliance.md  modul.md  weiterfuehrend.md
phasen/15-autonome-systeme/: compliance.md  modul.md
phasen/16-reasoning-und-test-time/: compliance.md  modul.md  weiterfuehrend.md
phasen/17-production-und-eu-hosting/: compliance.md  modul.md  weiterfuehrend.md
phasen/18-ethik-safety-alignment/: compliance.md  modul.md  weiterfuehrend.md
phasen/19-abschlussprojekte/: compliance.md  modul.md
phasen/20-recht-und-governance/: compliance.md  modul.md  weiterfuehrend.md
projekte/19-A-wp-plugin-helfer-rag/: README.md
projekte/19-A-wp-plugin-helfer-rag/sidecar/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  sidecar.py
projekte/19-B-dsgvo-compliance-checker/: README.md
projekte/19-C-charity-adoptions-bot/: README.md
projekte/19-D-aktiengesetz-rag/: README.md
projekte/19-E-voice-agent-multi/: README.md
tests/: conftest.py  test_compliance_struktur.py  test_struktur.py  test_werkzeuge.py
werkzeuge/: __init__.py  ai_act_classifier.py  ai_txt_generator.py  build_notebooks.py  compliance_lint.py  inject_colab_badges.py  run_notebook_smoke.py  stats.py
(+158 files in other folders)
