[project]
name = "wphr-sidecar"
version = "0.1.0"
description = "Python-Sidecar für KI-Plugin-Helfer RAG (FastAPI + Pydantic AI + Qdrant)"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Saskia Teichmann", email = "google@wp-studio.dev" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "httpx>=0.27",
]

[project.optional-dependencies]
# Production: echtes RAG mit Qdrant + Pydantic AI
production = [
  "qdrant-client>=1.12",
  "sentence-transformers>=3.3",
  "pydantic-ai>=1.85",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar.py"]
